--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
             margin: 0;
         }
         </style>
-        <title></title>
+        <title>Bike and Ride Stationen in Hamburg</title>
     </head>
-    <body>
+    <body style= "background-color:white; font-family:verdana;">
         <div id="map">
             <div id="popup" class="ol-popup">
                 <a href="#" id="popup-closer" class="ol-popup-closer"></a>
