--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </style>
         <style>
         html, body {
-            background-color: #ffffff;
+            background-color: # white;
         }
         .ol-control button {
             background-color: #f8f8f8 !important;
@@ -74,7 +74,7 @@
         <style>
         html, body, #map {
             width: 100%;
-            height: 100%;
+            height: 947px;
             padding: 0;
             margin: 0;
         }
@@ -82,6 +82,8 @@
         <title>Bike and Ride Stationen in Hamburg</title>
     </head>
     <body style= "background-color:white; font-family:verdana;">
+		<h1 style="font-family:verdana;">Bike and Ride Stationen in Hamburg<\h1>
+		<br>
         <div id="map">
             <div id="popup" class="ol-popup">
                 <a href="#" id="popup-closer" class="ol-popup-closer"></a>
